[Scale > 1] Resizing window on top or left edge moves it
Resizing a Wayland window on the left or top edge also moves it.
In 3.38.1, the behavior is weird but usable: mutter 3.38.1
In f0476f9c, resizing is unusable: mutter_3.38.1-20-gf0476f9cf
Bisecting discovered 911958cc as the first bad commit.
3840x2160, Wayland, scale 2, no scale-monitor-framebuffer
.
The bug disappears when using scale 1.
Edited by Jan Alexander Steffens